analyzer: fix ICE comparing COMPLEX_CSTs [PR97668]

gcc/analyzer/ChangeLog:
	PR analyzer/97668
	* svalue.cc (cmp_cst): Handle COMPLEX_CST.

gcc/testsuite/ChangeLog:
	PR analyzer/97668
	* gcc.dg/analyzer/pr97668.c: New test.
	* gfortran.dg/analyzer/pr97668.f: New test.